--- a/书签/其他收藏/index.html
+++ b/书签/其他收藏/index.html
@@ -8,24 +8,24 @@
     <link rel="icon" href="./images/logo.ico">
     <meta name="description" content="自由之翼资料分享">
     
-    <link rel="preload" href="./assets/css/0.styles.01f81940.css" as="style"><link rel="preload" href="./assets/js/app.e633d2fa.js" as="script"><link rel="preload" href="./assets/js/2.733019b2.js" as="script"><link rel="preload" href="./assets/js/14.a1873bce.js" as="script"><link rel="prefetch" href="./assets/js/10.b5f00ed4.js"><link rel="prefetch" href="./assets/js/11.f51d327f.js"><link rel="prefetch" href="./assets/js/12.9adb38c7.js"><link rel="prefetch" href="./assets/js/13.129e7c8e.js"><link rel="prefetch" href="./assets/js/15.e781a612.js"><link rel="prefetch" href="./assets/js/16.92435db3.js"><link rel="prefetch" href="./assets/js/17.fe843ee9.js"><link rel="prefetch" href="./assets/js/18.70ea9308.js"><link rel="prefetch" href="./assets/js/19.41dbcd8b.js"><link rel="prefetch" href="./assets/js/20.814a9cad.js"><link rel="prefetch" href="./assets/js/21.ebed435f.js"><link rel="prefetch" href="./assets/js/22.03fd5a0f.js"><link rel="prefetch" href="./assets/js/23.5c8b9ec5.js"><link rel="prefetch" href="./assets/js/24.eeef23e6.js"><link rel="prefetch" href="./assets/js/25.2e512890.js"><link rel="prefetch" href="./assets/js/3.f0ad1ae6.js"><link rel="prefetch" href="./assets/js/4.d12742be.js"><link rel="prefetch" href="./assets/js/5.216cae74.js"><link rel="prefetch" href="./assets/js/6.2d0a63f8.js"><link rel="prefetch" href="./assets/js/7.47e8947e.js"><link rel="prefetch" href="./assets/js/8.117dffc9.js"><link rel="prefetch" href="./assets/js/9.53b14f71.js">
-    <link rel="stylesheet" href="./assets/css/0.styles.01f81940.css">
+    <link rel="preload" href="./assets/css/0.styles.d245f1ed.css" as="style"><link rel="preload" href="./assets/js/app.d53a973e.js" as="script"><link rel="preload" href="./assets/js/2.733019b2.js" as="script"><link rel="preload" href="./assets/js/14.73166af5.js" as="script"><link rel="prefetch" href="./assets/js/10.8d0b6e6d.js"><link rel="prefetch" href="./assets/js/11.016fd561.js"><link rel="prefetch" href="./assets/js/12.a954b0cb.js"><link rel="prefetch" href="./assets/js/13.7a37f184.js"><link rel="prefetch" href="./assets/js/15.e6133ace.js"><link rel="prefetch" href="./assets/js/16.9bd2621e.js"><link rel="prefetch" href="./assets/js/17.80ad4725.js"><link rel="prefetch" href="./assets/js/18.09a034fc.js"><link rel="prefetch" href="./assets/js/19.0b6347cf.js"><link rel="prefetch" href="./assets/js/20.79f11175.js"><link rel="prefetch" href="./assets/js/21.05bc61b9.js"><link rel="prefetch" href="./assets/js/22.a0335a0f.js"><link rel="prefetch" href="./assets/js/23.3f34bc23.js"><link rel="prefetch" href="./assets/js/24.059ef648.js"><link rel="prefetch" href="./assets/js/25.7f8f37ce.js"><link rel="prefetch" href="./assets/js/26.300ef0b9.js"><link rel="prefetch" href="./assets/js/3.133f5e82.js"><link rel="prefetch" href="./assets/js/4.fc333d27.js"><link rel="prefetch" href="./assets/js/5.bfef3080.js"><link rel="prefetch" href="./assets/js/6.2d0a63f8.js"><link rel="prefetch" href="./assets/js/7.bea2d748.js"><link rel="prefetch" href="./assets/js/8.b9b99887.js"><link rel="prefetch" href="./assets/js/9.781f7c1e.js">
+    <link rel="stylesheet" href="./assets/css/0.styles.d245f1ed.css">
   </head>
   <body>
     <div id="app" data-server-rendered="true"><div class="theme-container"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12z"></path></svg></div> <a href="/./" class="home-link router-link-active"><img src="./images/logo.ico" alt="分享中心" class="logo"> <span class="site-name can-hide">分享中心</span></a> <div class="links"><div class="search-box"><input aria-label="Search" autocomplete="off" spellcheck="false" value=""> <!----></div> <nav class="nav-links can-hide"><div class="nav-item"><a href="/./" class="nav-link">
   首页
-</a></div><div class="nav-item"><a href="/./导航/导航.html" class="nav-link">
-  导航
+</a></div><div class="nav-item"><a href="/./书签/bookmarks_2023_4_17.html" class="nav-link">
+  书签
 </a></div><div class="nav-item"><a href="/./书签/编程学习/编程学习.html" class="nav-link">
   编程学习
 </a></div><div class="nav-item"><a href="/./书签/电脑方面/电脑方面.html" class="nav-link">
   电脑方面
+</a></div><div class="nav-item"><a href="/./书签/微软办公/微软办公.html" class="nav-link">
+  微软办公
 </a></div><div class="nav-item"><a href="/./书签/法律法规/法律法规.html" class="nav-link">
   法律法规
 </a></div><div class="nav-item"><a href="/./书签/工程规范/工程规范.html" class="nav-link">
   工程规范
-</a></div><div class="nav-item"><a href="/./书签/经验教学/经验教学.html" class="nav-link">
-  经验教学
 </a></div><div class="nav-item"><a href="/./书签/用的少的/用的少的.html" class="nav-link">
   用的少的
 </a></div><div class="nav-item"><a href="/./书签/检测测量/检测测量.html" class="nav-link">
@@ -36,36 +36,34 @@
   游戏娱乐
 </a></div><div class="nav-item"><a href="/./书签/知识补充/知识补充.html" class="nav-link">
   知识补充
-</a></div><div class="nav-item"><a href="/./书签/微软办公/微软办公.html" class="nav-link">
-  微软办公
-</a></div><div class="nav-item"><a href="/./书签/ChatGPT/ChatGPT.html" class="nav-link">
-  ChatGPT
-</a></div><div class="nav-item"><a href="/./书签/CAD学习/CAD学习.html" class="nav-link">
-  CAD学习
 </a></div><div class="nav-item"><a href="/./书签/AI绘画/AI绘画.html" class="nav-link">
   AI绘画
-</a></div><div class="nav-item"><a href="/./书签/书签栏/书签栏.html" class="nav-link">
-  书签栏
+</a></div><div class="nav-item"><a href="/./书签/CAD学习/CAD.html" class="nav-link">
+  CAD
+</a></div><div class="nav-item"><a href="/./书签/ChatGPT/ChatGPT.html" class="nav-link">
+  ChatGPT
+</a></div><div class="nav-item"><a href="/./书签/外网资源/外网资源.html" class="nav-link">
+  外网资源
 </a></div><div class="nav-item"><a href="https://space.bilibili.com/4444905" target="_blank" rel="noopener noreferrer" class="nav-link external">
   B站中心
-  <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="游戏目录" class="dropdown-title"><span class="title">游戏目录</span> <span class="arrow down"></span></button> <button type="button" aria-label="游戏目录" class="mobile-dropdown-title"><span class="title">游戏目录</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="https://lol.qq.com/main.shtml" target="_blank" rel="noopener noreferrer" class="nav-link external">
+  <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="游戏官网" class="dropdown-title"><span class="title">游戏官网</span> <span class="arrow down"></span></button> <button type="button" aria-label="游戏官网" class="mobile-dropdown-title"><span class="title">游戏官网</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="https://lol.qq.com/main.shtml" target="_blank" rel="noopener noreferrer" class="nav-link external">
   英雄联盟
   <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></li><li class="dropdown-item"><!----> <a href="https://speed.qq.com/" target="_blank" rel="noopener noreferrer" class="nav-link external">
   QQ飞车
   <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></li></ul></div></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/./" class="nav-link">
   首页
-</a></div><div class="nav-item"><a href="/./导航/导航.html" class="nav-link">
-  导航
+</a></div><div class="nav-item"><a href="/./书签/bookmarks_2023_4_17.html" class="nav-link">
+  书签
 </a></div><div class="nav-item"><a href="/./书签/编程学习/编程学习.html" class="nav-link">
   编程学习
 </a></div><div class="nav-item"><a href="/./书签/电脑方面/电脑方面.html" class="nav-link">
   电脑方面
+</a></div><div class="nav-item"><a href="/./书签/微软办公/微软办公.html" class="nav-link">
+  微软办公
 </a></div><div class="nav-item"><a href="/./书签/法律法规/法律法规.html" class="nav-link">
   法律法规
 </a></div><div class="nav-item"><a href="/./书签/工程规范/工程规范.html" class="nav-link">
   工程规范
-</a></div><div class="nav-item"><a href="/./书签/经验教学/经验教学.html" class="nav-link">
-  经验教学
 </a></div><div class="nav-item"><a href="/./书签/用的少的/用的少的.html" class="nav-link">
   用的少的
 </a></div><div class="nav-item"><a href="/./书签/检测测量/检测测量.html" class="nav-link">
@@ -76,23 +74,21 @@
   游戏娱乐
 </a></div><div class="nav-item"><a href="/./书签/知识补充/知识补充.html" class="nav-link">
   知识补充
-</a></div><div class="nav-item"><a href="/./书签/微软办公/微软办公.html" class="nav-link">
-  微软办公
-</a></div><div class="nav-item"><a href="/./书签/ChatGPT/ChatGPT.html" class="nav-link">
-  ChatGPT
-</a></div><div class="nav-item"><a href="/./书签/CAD学习/CAD学习.html" class="nav-link">
-  CAD学习
 </a></div><div class="nav-item"><a href="/./书签/AI绘画/AI绘画.html" class="nav-link">
   AI绘画
-</a></div><div class="nav-item"><a href="/./书签/书签栏/书签栏.html" class="nav-link">
-  书签栏
+</a></div><div class="nav-item"><a href="/./书签/CAD学习/CAD.html" class="nav-link">
+  CAD
+</a></div><div class="nav-item"><a href="/./书签/ChatGPT/ChatGPT.html" class="nav-link">
+  ChatGPT
+</a></div><div class="nav-item"><a href="/./书签/外网资源/外网资源.html" class="nav-link">
+  外网资源
 </a></div><div class="nav-item"><a href="https://space.bilibili.com/4444905" target="_blank" rel="noopener noreferrer" class="nav-link external">
   B站中心
-  <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="游戏目录" class="dropdown-title"><span class="title">游戏目录</span> <span class="arrow down"></span></button> <button type="button" aria-label="游戏目录" class="mobile-dropdown-title"><span class="title">游戏目录</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="https://lol.qq.com/main.shtml" target="_blank" rel="noopener noreferrer" class="nav-link external">
+  <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="游戏官网" class="dropdown-title"><span class="title">游戏官网</span> <span class="arrow down"></span></button> <button type="button" aria-label="游戏官网" class="mobile-dropdown-title"><span class="title">游戏官网</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="https://lol.qq.com/main.shtml" target="_blank" rel="noopener noreferrer" class="nav-link external">
   英雄联盟
   <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></li><li class="dropdown-item"><!----> <a href="https://speed.qq.com/" target="_blank" rel="noopener noreferrer" class="nav-link external">
   QQ飞车
-  <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></li></ul></div></div> <!----></nav>  <ul class="sidebar-links"><li><a href="/./" aria-current="page" class="sidebar-link">Home</a></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"></div> <footer class="page-edit"><!----> <!----></footer> <!----> </main></div><div class="global-ui"></div></div>
-    <script src="./assets/js/app.e633d2fa.js" defer></script><script src="./assets/js/2.733019b2.js" defer></script><script src="./assets/js/14.a1873bce.js" defer></script>
+  <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens new window)</span></span></a></li></ul></div></div> <!----></nav>  <ul class="sidebar-links"><li><section class="sidebar-group collapsable depth-0"><p class="sidebar-heading open"><span>目录</span> <span class="arrow down"></span></p> <ul class="sidebar-links sidebar-group-items"><li><a href="/./书签/bookmarks_2023_4_17.html" class="sidebar-link">书签栏</a></li></ul></section></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"></div> <footer class="page-edit"><!----> <!----></footer> <!----> </main></div><div class="global-ui"></div></div>
+    <script src="./assets/js/app.d53a973e.js" defer></script><script src="./assets/js/2.733019b2.js" defer></script><script src="./assets/js/14.73166af5.js" defer></script>
   </body>
 </html>
